exports[`test pushes type prop to inputclasses 1`] = `
<div
  className="input mytype"
  data-spec="input-wrapper">
  <h6
    className="soft-left push-half-left flush-bottom text-left float-left locked-top"
    style={
      Object {
        "paddingTop": "3px",
      }
    }>
    <small
      data-spec="input-label" />
  </h6>
  <input
    data-spec="input"
    defaultChecked=""
    style={
      Object {
        "width": 0,
      }
    }
    type="mytype" />
  <Label />
</div>
`;

exports[`test renderHelpText renders when error and errorText 1`] = `
<span
  className="input__status">
  test
</span>
`;

exports[`test renderHelpText renders when status 1`] = `
<span
  className="input__status">
  this is my status
</span>
`;

exports[`test should accept a default value 1`] = `
<Checkbox
  defaultValue={true}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked="checked"
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept an id 1`] = `
<Checkbox
  id="harambe">
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      id="harambe"
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label
      labelFor="harambe">
      <label
        htmlFor="harambe"
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept label 1`] = `
<Checkbox
  label="harambe">
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      id="harambe"
      name="harambe"
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label
      labelFor="harambe">
      <label
        htmlFor="harambe"
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should accept name prop 1`] = `
<Checkbox
  name="harambe">
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      id="harambe"
      name="harambe"
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label
      labelFor="harambe">
      <label
        htmlFor="harambe"
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 1`] = `
<Checkbox
  classes={
    Array [
      "test1",
      "harambe",
    ]
  }>
  <div
    className="input checkbox test1 harambe"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 2`] = `
<Checkbox
  classes="test1 harambe">
  <div
    className="input checkbox test1 harambe"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add inputClasses with inputClasses prop 1`] = `
<Checkbox
  inputClasses="test1 harambe">
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      className="test1 harambe"
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should disable input with disabled prop 1`] = `
<Checkbox
  disabled={true}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      disabled={true}
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should display children 1`] = `
<Checkbox>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label">
        this is a test
      </small>
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should hide label with hideLabel prop 1`] = `
<Checkbox
  hideLabel={true}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
  </div>
</Checkbox>
`;

exports[`test should render with minimal props 1`] = `
<Checkbox>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should respond to onclick prop 1`] = `
<Checkbox
  clicked={[Function]}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top"
      style={
        Object {
          "paddingTop": "3px",
        }
      }>
      <small
        data-spec="input-label" />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      onClick={[Function]}
      style={
        Object {
          "width": 0,
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;
